// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmUninstall should match a snapshot when FORMSTATE is PENDING 1`] = `
<Fragment>
  <Component
    afterClose={[MockFunction]}
    title="Confirm Uninstall"
  />
  <Component
    body={
      <React.Fragment>
        <Unknown>
          Are you sure you wish to uninstall ‘
          1
          ’ from ‘
          DXX
          ’?
        </Unknown>
        <Unknown
          id="terminatedReason"
          labelText="Please confirm reason for uninstalling"
          name="terminatedReason"
        />
      </React.Fragment>
    }
  />
  <Component
    footerItems={
      <React.Fragment>
        <Unknown
          disabled={false}
          loading={false}
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Yes, Uninstall
        </Unknown>
        <Unknown
          disabled={false}
          onClick={[MockFunction]}
          type="button"
          variant="secondary"
        >
          Cancel
        </Unknown>
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`ConfirmUninstall should match a snapshot when FORMSTATE is SUBMITTING 1`] = `
<Fragment>
  <Component
    afterClose={[MockFunction]}
    title="Confirm Uninstall"
  />
  <Component
    body={
      <React.Fragment>
        <Unknown>
          Are you sure you wish to uninstall ‘
          1
          ’ from ‘
          DXX
          ’?
        </Unknown>
        <Unknown
          id="terminatedReason"
          labelText="Please confirm reason for uninstalling"
          name="terminatedReason"
        />
      </React.Fragment>
    }
  />
  <Component
    footerItems={
      <React.Fragment>
        <Unknown
          disabled={true}
          loading={true}
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Yes, Uninstall
        </Unknown>
        <Unknown
          disabled={true}
          onClick={[MockFunction]}
          type="button"
          variant="secondary"
        >
          Cancel
        </Unknown>
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`ConfirmUninstall should match a snapshot when FORMSTATE is SUCCESS 1`] = `
<CallToAction
  buttonText="Back to List"
  dataTest="alertUninstallSuccess"
  isCenter={true}
  onButtonClick={[Function]}
  title="Success"
>
  ‘
  1
  ’ has been successfully uninstalled from ‘
  DXX
  ’
</CallToAction>
`;
